# slate

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.txt  editable.c  editor.c  hello.txt  list  records.txt  slateui.c  ui.c
source/: editable.c  editor.c  initialize.c  initialize.h  keycodes.h  listfunc.h  slate.h  slateui.c
